# zhsort

./: .gitignore  Procfile  README.md  package.json  pyproject.toml  requirements.txt  runserver.py  server.py  webpack.common.js  webpack.dev.js  webpack.prod.js
asset/: junda.tsv
dev/: create_db.py
public/: index.css  index.html
public/js/: index.min.js  index.min.js.map
src/python/: api.py  db.py  server.py
src/script/: create.py
src/web/: index.ts  xlsx.ts
zhlib_snapshot/: db.py  level.py  util.py
zhsort/: __init__.py  dir.py  resources.py
zhsort/static/: index.css  index.js
zhsort/templates/: index.html
