[tool.poetry]
name = "zhsort"
version = "0.1.0"
description = "Chinese Vocab Extracter and Sorter"
authors = ["patarapolw <patarapolw@gmail.com>"]

[tool.poetry.dependencies]
python = "*"
gunicorn = "^19.9"
flask = "^1.0"
xlsxwriter = "^1.1"
peewee = "^3.7"
wordfreq = "^2.2"
jieba = "^0.39.0"
regex = "=2018.02.21"

[tool.poetry.dev-dependencies]
zhlib = {path = "../zhlib"}
