[tool.poetry]
name = "zhsort"
version = "0.2.0"
description = "Chinese Vocab Extracter and Sorter"
authors = ["Pacharapol Withayasakpunt"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
wordfreq = "^2.2"
jieba = "^0.39.0"
pinyin = "^0.4.0"
python-dotenv = "^0.10.3"
flask-cors = "^3.0"
gunicorn = "^19.9"
regex = "=2018.02.21"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
